# s3_bucket_to_parquet

./: .env.template  .gitignore  Cargo.toml  README.md  go.mod  go.sum  json_to_parquet.go  json_to_parquet.py  pyproject.toml
go_packages/: types.go
src/: main.rs
